fix(ZiltagMapPage): fix word-wrap on long english word
close #185

--- a/src/page/ZiltagMapPage/index.css
+++ b/src/page/ZiltagMapPage/index.css
@@ -36,6 +36,10 @@
   line-height: 22px;
 }
 
+.ziltag-ziltag-map-page__ziltag-main {
+  width: calc(100% - 34px);
+}
+
 .ziltag-ziltag-map-page__ziltag-content {
   height: 100px;
   font-size: 14px;
